login splash screen + modif css

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "fetch": "^1.1.0",
     "node-yelp": "0.0.3",
     "oauth-1.0a": "^1.0.1",
+    "passport": "^0.3.2",
+    "passport-github": "^1.1.0",
     "path": "^0.12.7",
     "places.js": "^1.0.1",
     "react": "15.0.2",
