--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "fetch": "^1.1.0",
     "node-yelp": "0.0.3",
     "oauth-1.0a": "^1.0.1",
